feat(ui): add tab context menu, search functionality, and session restore
- Add tab context menu with actions: duplicate, pin/unpin, close, close others, close right
- Add search inputs for bookmarks and history panels with real-time filtering
- Add clear all downloads button in downloads panel
- Add session restore setting and functionality to restore tabs on startup
- Add open download path feature to locate downloaded files in system
- Add keyboard shortcuts: Ctrl+L/K (focus URL), Ctrl+H (history), Ctrl+J (downloads), Ctrl+Shift+B (bookmarks)
- Add Alt+Arrow keys for navigation (back/forward)
- Add double-click on tabs bar to create new tab
- Add zoom factor persistence per URL
- Update i18n translations for new features in both English and Chinese
- Add dark mode styles for new UI components
- Add pinned tab styles and animations

--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -21,18 +21,25 @@
   },
   "tabs": {
     "newTab": "New Tab",
-    "close": "Close"
+    "close": "Close",
+    "duplicate": "Duplicate Tab",
+    "pin": "Pin Tab",
+    "unpin": "Unpin Tab",
+    "closeOthers": "Close Others",
+    "closeRight": "Close Tabs to Right"
   },
   "panels": {
     "history": {
       "title": "History",
       "close": "Close",
-      "empty": "No history"
+      "empty": "No history",
+      "search": "Search history..."
     },
     "bookmarks": {
       "title": "My Bookmarks",
       "close": "Close",
-      "empty": "No bookmarks"
+      "empty": "No bookmarks",
+      "search": "Search bookmarks..."
     },
     "settings": {
       "title": "Browser Settings",
@@ -46,6 +53,7 @@
       "darkModeToggle": "Toggle Dark/Light Mode",
       "zoom": "Zoom Level",
       "zoomReset": "Reset",
+      "restoreSession": "Restore Previous Session",
       "language": "Interface Language",
       "exportData": "Export Browser Data (JSON)",
       "clearData": "Clear Browser Data (History/Bookmarks)",
@@ -57,7 +65,9 @@
     "downloads": {
       "title": "Downloads",
       "close": "Close",
-      "empty": "No downloads"
+      "empty": "No downloads",
+      "clearAll": "Clear Downloads",
+      "showInFolder": "Show in Folder"
     }
   },
   "find": {
