feat: enhance translation to replace webpage content with Shadow DOM and iframe support, fix duplicate requests

--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -55,6 +55,7 @@
       "zoomReset": "Reset",
       "restoreSession": "Restore Previous Session",
       "language": "Interface Language",
+      "languageDesc": "Choose the display language for the browser interface",
       "exportData": "Export Browser Data (JSON)",
       "clearData": "Clear Browser Data (History/Bookmarks)",
       "clearDataConfirm": "Are you sure you want to clear all history and bookmarks?",
@@ -62,6 +63,7 @@
       "incognitoOn": "Incognito mode enabled (new tabs only)",
       "incognitoOff": "Incognito mode disabled",
       "ai": {
+        "title": "AI Settings",
         "endpoint": "API Endpoint URL",
         "endpointDesc": "Configure the base URL for AI API",
         "apiKey": "API Key",
@@ -71,6 +73,36 @@
         "openaiChat": "OpenAI Chat Compatible",
         "openaiResponse": "OpenAI Response",
         "anthropic": "Anthropic"
+      },
+      "translation": {
+        "title": "Translation",
+        "autoTranslate": "Auto Translate Pages",
+        "autoTranslateDesc": "Translate pages after load",
+        "engine": "Translation Engine",
+        "engineDesc": "Select translation engine",
+        "engineBing": "Bing Translator (Free)",
+        "engineAI": "AI Translation",
+        "targetLanguage": "Target Language",
+        "targetLanguageDesc": "Choose translated language",
+        "displayMode": "Display Mode",
+        "displayModeDesc": "Bilingual shows source above translation",
+        "modeBilingual": "Bilingual",
+        "modeReplace": "Replace Source",
+        "translateNow": "Translate Current Tab",
+        "translateNowDesc": "Translate active page immediately",
+        "translateNowBtn": "Translate Now",
+        "aiConfig": "AI Translation Config",
+        "aiEndpoint": "API Endpoint URL",
+        "aiEndpointDesc": "Base URL for AI translation API",
+        "aiApiKey": "API Key",
+        "aiApiKeyDesc": "Your API access key",
+        "aiRequestType": "Request Type",
+        "aiRequestTypeDesc": "Select the API request format type",
+        "aiOpenaiChat": "OpenAI Chat Compatible",
+        "aiOpenaiResponse": "OpenAI Response",
+        "aiAnthropic": "Anthropic",
+        "aiModel": "Model ID",
+        "aiModelDesc": "Specify the AI model to use, e.g. gpt-4, claude-3-sonnet"
       }
     },
     "downloads": {
