--- a/src/renderer/locales/zh-CN.json
+++ b/src/renderer/locales/zh-CN.json
@@ -55,6 +55,7 @@
       "zoomReset": "重置",
       "restoreSession": "恢复上次会话",
       "language": "界面语言",
+      "languageDesc": "选择浏览器界面的显示语言",
       "exportData": "导出浏览器数据 (JSON)",
       "clearData": "清除浏览器数据（历史/书签）",
       "clearDataConfirm": "确定要清除所有历史和书签吗？",
@@ -62,6 +63,7 @@
       "incognitoOn": "已启用无痕模式（仅新标签页生效）",
       "incognitoOff": "已关闭无痕模式",
       "ai": {
+        "title": "AI设置",
         "endpoint": "API端点URL",
         "endpointDesc": "配置AI API的基础URL地址",
         "apiKey": "API密钥",
@@ -71,6 +73,36 @@
         "openaiChat": "OpenAI Chat 兼容",
         "openaiResponse": "OpenAI Response",
         "anthropic": "Anthropic"
+      },
+      "translation": {
+        "title": "翻译设置",
+        "autoTranslate": "自动翻译页面",
+        "autoTranslateDesc": "页面加载完成后自动翻译",
+        "engine": "翻译引擎",
+        "engineDesc": "选择翻译引擎",
+        "engineBing": "微软翻译 (免费)",
+        "engineAI": "AI翻译",
+        "targetLanguage": "目标语言",
+        "targetLanguageDesc": "选择翻译后的语言",
+        "displayMode": "显示模式",
+        "displayModeDesc": "双语模式在原文上方显示翻译",
+        "modeBilingual": "双语显示",
+        "modeReplace": "替换原文",
+        "translateNow": "翻译当前标签页",
+        "translateNowDesc": "立即翻译当前页面",
+        "translateNowBtn": "立即翻译",
+        "aiConfig": "AI翻译配置",
+        "aiEndpoint": "API端点URL",
+        "aiEndpointDesc": "AI翻译API的基础URL地址",
+        "aiApiKey": "API密钥",
+        "aiApiKeyDesc": "您的API访问密钥",
+        "aiRequestType": "请求方式",
+        "aiRequestTypeDesc": "选择API的请求格式类型",
+        "aiOpenaiChat": "OpenAI Chat 兼容",
+        "aiOpenaiResponse": "OpenAI Response",
+        "aiAnthropic": "Anthropic",
+        "aiModel": "模型ID",
+        "aiModelDesc": "指定要使用的AI模型，如 gpt-4、claude-3-sonnet 等"
       }
     },
     "downloads": {
