feat: 优化翻译管理器和快捷键功能
- 重构翻译管理器，添加批量翻译和语言检测功能
- 优化快捷键管理器，改进冲突检测和显示逻辑
- 增强标签页管理器，添加拖拽排序功能
- 更新历史和设置面板布局
- 添加中英文本地化支持
- 优化主进程和渲染器进程的事件处理

--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -91,6 +91,8 @@
         "modelIdDesc": "Specify the model name to use",
         "targetLanguage": "Target Language",
         "targetLanguageDesc": "Select the target language for translation",
+        "dynamicTranslation": "Dynamic Translation",
+        "dynamicTranslationDesc": "Automatically detect and translate new content after initial translation",
         "advancedOptions": "Advanced Options",
         "streamingTranslation": "Streaming Translation",
         "streamingTranslationDesc": "When enabled, text appears word by word for real-time translation experience",
