feat(translation): 添加并发翻译与按标签页同步状态
- 高级设置新增并发翻译开关与并发数配置
- 主进程翻译支持按并发数分轮并行发送（块数/字符数按并发倍数计算）
- 支持并发请求取消
- 修复切换标签页时翻译按钮状态显示串联

--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -96,6 +96,10 @@
         "advancedOptions": "Advanced Options",
         "streamingTranslation": "Streaming Translation",
         "streamingTranslationDesc": "When enabled, text appears word by word for real-time translation experience",
+        "concurrencyEnabled": "Concurrent Translation",
+        "concurrencyEnabledDesc": "Split into multiple requests and send them in parallel",
+        "concurrencyCount": "Concurrency",
+        "concurrencyCountDesc": "Number of parallel requests per round",
         "maxTextsPerRequest": "Max Texts Per Request",
         "maxTextsPerRequestDesc": "Maximum number of text blocks per translation request",
         "maxCharsPerRequest": "Max Characters Per Request",
