--- a/src/renderer/locales/zh-CN.json
+++ b/src/renderer/locales/zh-CN.json
@@ -96,6 +96,10 @@
         "advancedOptions": "高级选项",
         "streamingTranslation": "流式翻译",
         "streamingTranslationDesc": "启用后文字将逐个显示，提供实时翻译体验",
+        "concurrencyEnabled": "并发翻译",
+        "concurrencyEnabledDesc": "开启后将按并发数拆分为多个请求并行发送",
+        "concurrencyCount": "并发数",
+        "concurrencyCountDesc": "每轮同时发起的请求数量",
         "maxTextsPerRequest": "每次请求最大文本块数",
         "maxTextsPerRequestDesc": "单次翻译请求包含的最大文本块数量",
         "maxCharsPerRequest": "每次请求最大字符数",
